--- a/EncryptPasswords/EncryptPasswords.csproj
+++ b/EncryptPasswords/EncryptPasswords.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataFile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DataFile.Designer.cs">
+      <DependentUpon>DataFile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DataFile.resx">
+      <DependentUpon>DataFile.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
