--- a/EncryptPasswords/App.config
+++ b/EncryptPasswords/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <appSettings>
+      <add key="dtUser" value="test1"/>
+      <add key="dtPass" value="passtest1"/>
+
+      <add key="keyCode" value="ftmq41e3514weu07"/>
+    </appSettings>
 </configuration>
