--- a/EncryptPasswords/App.config
+++ b/EncryptPasswords/App.config
@@ -4,9 +4,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <add key="dtUser" value="jh2021_ep" />
-    <add key="dtPass" value="1007revolorio2001" />
-    <add key="keyCode" value="ftmq41e3514weu07" />
+    <add key="dtUser" value="test" />
+    <add key="dtPass" value="test" />
+    <add key="keyCode" value="ftmq41e3514wbu07" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
